<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.microbean</groupId>
  <artifactId>microbean-scope</artifactId>
  <version>0.0.2</version>

  <parent>
    <groupId>org.microbean</groupId>
    <artifactId>microbean-pluginmanagement-pom</artifactId>
    <version>21</version>
    <relativePath />
  </parent>

  <name>microBean™ Type</name>
  <description>microBean™ Scope: Utility classes for implementing scopes.</description>
  <inceptionYear>2022</inceptionYear>
  <url>https://microbean.github.io/microbean-scope</url>

  <scm>
    <connection>${scm.url}</connection>
    <developerConnection>${scm.url}</developerConnection>
    <url>https://github.com/microbean/microbean-scope/</url>
    <tag>v0.0.2</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>sonatype-oss-repository-hosting</id>
      <!-- See https://central.sonatype.org/publish/publish-maven/#distribution-management-and-authentication -->
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <site>
      <id>Github Pages</id>
      <name>microBean™ Function Site</name>
      <url>https://microbean.github.io/microbean-scope/</url>
    </site>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>


      <!-- Normal dependencies. -->


      <dependency>
        <groupId>org.microbean</groupId>
        <artifactId>microbean-qualifier</artifactId>
        <version>0.2.4</version>
        <type>jar</type>
      </dependency>


    </dependencies>
  </dependencyManagement>

  <dependencies>


    <!-- Compile-scoped dependencies. -->


    <dependency>
      <groupId>org.microbean</groupId>
      <artifactId>microbean-qualifier</artifactId>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>


    <!-- Test-scoped dependencies. -->


    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <type>jar</type>
      <scope>test</scope>
    </dependency>


  </dependencies>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <checkstyleRules>
              <module name="Checker">
                <module name="BeforeExecutionExclusionFileFilter">
                  <property name="fileNamePattern" value="module\-info\.java$" />
                </module>
                <module name="FileTabCharacter">
                  <property name="eachLine" value="true" />
                </module>
                <module name="JavadocPackage" />
                <module name="LineLength">
                  <property name="max" value="160" />
                </module>
                <module name="NewlineAtEndOfFile">
                  <property name="lineSeparator" value="lf" />
                </module>
                <module name="TreeWalker">
                  <module name="AnnotationLocation">
                    <property name="allowSamelineSingleParameterlessAnnotation" value="false" />
                  </module>
                  <module name="AnnotationUseStyle" />
                  <module name="ArrayTypeStyle" />
                  <module name="AvoidNestedBlocks" />
                  <module name="AvoidStarImport" />
                  <module name="ClassMemberImpliedModifier" />
                  <module name="CommentsIndentation" />
                  <module name="DeclarationOrder" />
                  <module name="DefaultComesLast" />
                  <module name="EmptyBlock" />
                  <module name="EmptyCatchBlock" />
                  <module name="EmptyStatement" />
                  <module name="EqualsHashCode" />
                  <module name="ExplicitInitialization" />
                  <module name="FinalClass" />
                  <module name="FinalLocalVariable">
                    <property name="tokens" value="VARIABLE_DEF,PARAMETER_DEF" />
                  </module>
                  <module name="HideUtilityClassConstructor" />
                  <module name="InnerAssignment" />
                  <module name="InnerTypeLast" />
                  <module name="InterfaceIsType" />
                  <module name="InterfaceMemberImpliedModifier">
                    <property name="violateImpliedAbstractMethod" value="false" />
                  </module>
                  <module name="InvalidJavadocPosition" />
                  <module name="JavadocContentLocationCheck" />
                  <module name="JavadocMissingWhitespaceAfterAsterisk" />
                  <module name="JavadocParagraph" />
                  <module name="JavadocStyle" />
                  <module name="JavadocVariable">
                    <property name="scope" value="protected" />
                  </module>
                  <module name="LeftCurly" />
                  <module name="MethodTypeParameterName" />
                  <module name="MissingCtor" />
                  <module name="MissingDeprecated" />
                  <module name="MissingJavadocMethod" />
                  <module name="MissingJavadocPackage" />
                  <module name="MissingJavadocType">
                    <property name="scope" value="protected" />
                  </module>
                  <module name="MissingOverride" />
                  <module name="MultipleVariableDeclarations" />
                  <module name="ModifierOrder" />
                  <module name="NeedBraces" />
                  <module name="NoArrayTrailingComma" />
                  <module name="NoFinalizer" />
                  <module name="NonEmptyAtclauseDescription" />
                  <module name="OneStatementPerLine" />
                  <module name="OneTopLevelClass" />
                  <module name="OuterTypeFilename" />
                  <module name="OverloadMethodsDeclarationOrder" />
                  <module name="PackageDeclaration" />
                  <module name="RedundantImport" />
                  <module name="RegexpSinglelineJava">
                    <property name="format" value="\s+$" />
                    <property name="message" value="File contains trailing whitespace." />
                  </module>
                  <module name="RequireEmptyLineBeforeBlockTagGroup" />
                  <module name="RequireThis" />
                  <module name="RightCurly" />
                  <module name="SummaryJavadocCheck" />
                  <module name="SuppressWarningsHolder" />
                  <module name="UnnecessarySemicolonAfterOuterTypeDeclaration" />
                  <module name="UnnecessarySemicolonAfterTypeMemberDeclaration" />
                  <module name="UnnecessarySemicolonInEnumeration" />
                  <module name="UnnecessarySemicolonInTryWithResources" />
                  <module name="UnusedImports" />
                  <module name="UnusedLocalVariable" />
                  <module name="UpperEll" />
                  <module name="VariableDeclarationUsageDistance" />
                </module>
                <property name="charset" value="${project.build.sourceEncoding}" />
                <property name="tabWidth" value="2" />
              </module>
            </checkstyleRules>
            <propertyExpansion>
              project.basedir=${project.basedir}
              project.build.sourceEncoding=${project.build.sourceEncoding}
            </propertyExpansion>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <additionalOptions>
              <additionalOption>--add-stylesheet</additionalOption>
              <additionalOption>${project.basedir}/src/main/javadoc/css/fonts.css</additionalOption>
            </additionalOptions>
            <docfilessubdirs>true</docfilessubdirs>
          </configuration>
        </plugin>
        
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <argLine>--add-opens=org.microbean.scope/org.microbean.scope=ALL-UNNAMED</argLine>
            <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
            <!-- See https://github.com/apache/maven-surefire/blob/eb48f1b59ca5ccf6954ef33ecab03dbaf93214cd/surefire-providers/surefire-junit-platform/src/main/java/org/apache/maven/surefire/junitplatform/JUnitPlatformProvider.java#L242-L262 -->
            <properties>
              <configurationParameters>
                junit.jupiter.execution.parallel.enabled=true
                junit.jupiter.execution.parallel.mode.default=concurrent
              </configurationParameters>
            </properties>
            <systemPropertyVariables>
              <project.build.directory>${project.build.directory}</project.build.directory>
              <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
            </systemPropertyVariables>
          </configuration>
        </plugin>

      </plugins>
    </pluginManagement>
  </build>

  <properties>

    <jdkToolchainVendor>openjdk</jdkToolchainVendor>

    <!-- maven-compiler-plugin properties -->
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <!-- maven-javadoc-plugin properties -->
    <detectJavaApiLink>false</detectJavaApiLink>
    <links>https://docs.oracle.com/en/java/javase/17/docs/api,https://microbean.github.io/microbean-development-annotations/apidocs/</links>

    <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/ -->
    <goals>deploy,post-site,scm-publish:publish-scm</goals>

    <scm.url>scm:git:git@github.com:microbean/microbean-scope.git</scm.url>

    <!-- maven-scm-publish-plugin properties;
         see https://maven.apache.org/plugins/maven-scm-publish-plugin/publish-scm-mojo.html -->
    <scmpublish.content>${project.reporting.outputDirectory}</scmpublish.content>
    <scmpublish.pubScmUrl>${project.scm.developerConnection}</scmpublish.pubScmUrl>
    <scmpublish.scm.branch>gh-pages</scmpublish.scm.branch>

  </properties>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc-no-fork</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

</project>
